# vla

backup/Teaching_Accelerator/: README.md  pyproject.toml
backup/Teaching_Accelerator/docs/: demospeedup_proxy_policy_notes.md  openpi_integration_plan.md
backup/Teaching_Accelerator/legacy/openpi_modified_demospeedup_snapshot/: README.md
backup/Teaching_Accelerator/scripts/: compute_teaching_labels.py
backup/Teaching_Accelerator/teaching_accelerator/: __init__.py  action_targets.py  labels.py  sidecar.py
backup/Teaching_Accelerator/tests/: test_teaching_accelerator.py
openpi_modified/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  conftest.py  pyproject.toml  scripts.recap_offline_pipeline.dlc.sh  scripts.sh  scripts.test.sh  scripts.train.dlc.sh  scripts.train.dsw.multinode_test.sh  scripts.train.dsw.sh
openpi_modified/.github/workflows/: ci.yml  glm-assistant.yml  glm-code-review.yml  glm_assistant.py  glm_code_review.py  pre-commit.yml  test.yml
openpi_modified/data_processing/seatbelt/: self_play_wrong_tag_log_new.jsonl  verify_progress.json
openpi_modified/docs/: ci.md  github_runner.md  gitlab_ci_migration.md
openpi_modified/examples/: convert_jax_model_to_pytorch.py
openpi_modified/examples/aloha_real/: real_env.py
openpi_modified/examples/arxx5_bimanual/: eval_arxone_gr00t_wise.py  main_eval_gr00t_lerobot_policy.py
openpi_modified/examples/droid/: compute_droid_nonidle_ranges.py  convert_droid_data_to_lerobot.py  main.py
openpi_modified/examples/lerobot_fmt_eval/: lerobot_eval_policy.py  openpi_model_infer.py
openpi_modified/examples/libero/: convert_lerobot_to_parquet_with_images.py  main.py
openpi_modified/examples/mobile_aloha_AgileX/: convert_aloha_data_to_lerobot.py  env.py  main.py  real_env.py  robot_utils.py
openpi_modified/examples/simple_client/: main.py  main_eval_gr00t_lerobot_policy.py  main_eval_piper.py  main_eval_policy.py
openpi_modified/scripts/: analyze_config_dataset_stats_for_folding_box.py  async_eval-bipiper.py  compute_advantages.py  compute_norm_stats.py  compute_norm_stats_fast.py  compute_norm_stats_multi_datasets.py  compute_norm_stats_multi_datasetsv3.py  compute_rl_norm_stats.py  compute_values.py  convert_t5gemma2_encoder_to_openpi.py  diagnose_gt_distribution.py  eval_bipiper.py  eval_compare.py  eval_loss_physical_scale.py  format_staged_python.sh  generate_openloop_eval_configs.py  install_format_hook.sh  policy_inference.py  prepare_minitest_dataset.py  run_multi_eval_when_gpu_free.sh  run_openloop_eval.py  serve_policy.py  test.py  test_rl.py  test_subtask.py  test_unify.py  train.py  train_pytorch.py  train_rl.py  train_rl_test.py  train_test.py  vis_intervention.py
openpi_modified/scripts/benchmark/: aggregate_dual_prompt.py  build_benchmark_v0409.py  build_clothes_splits.py  classification_metrics.py  clothes_all_repos.txt  compute_separation_scores.py  data_auditor.py  data_parser.py  data_splits.py  episode_classifier_2d.py  fill_head_pred_ranges.py  flatten_classifier.py  inference_loops.py  merge_batches.py  merge_ground_truth_labels.py  metrics.py  post_sparse_pipeline.sh  run_benchmark.py  run_policy_l2_scoring.sh  run_v0409_multi_model_eval.sh  synthesize_l2_labels.py  tail_pred_analysis.py  wait_gpu_then_run.sh
openpi_modified/scripts/benchmark/viz/: __init__.py  curve_plots.py  image_utils.py  status_bar.py  video.py
openpi_modified/scripts/ci/: setup_runtime_env.sh  wait_for_gpu.sh
openpi_modified/src/openpi/: transforms.py  transforms_test.py
openpi_modified/src/openpi/configs/: base.py  cfg_pi0.5_14_dim_example.py  cfg_pi0.5_28_dim.robomind_2.0305.py  cfg_pi0.5_fold_T_14_dim.py  cfg_pi0.5_pick_and_place_14_dim.py  cfg_pi0.5_pick_and_place_14_dim_subtask_cond.py  cfg_pi0.5_pour_water_14_dim.py  cfg_pi0.5_seatbelt_14_dim.py  cfg_pi0.5_tube_14_dim.py  cfg_pi05_base_finetune_all_grab_approach_qirl.py  cfg_pi05_base_finetune_box_recap_cpt_0320.py  cfg_pi05_base_finetune_box_recap_cpt_0419_close.py  cfg_pi05_base_finetune_box_recap_pt_0323_rtc_nb.py  cfg_pi05_base_finetune_box_value_stage1.py  cfg_pi05_base_finetune_box_value_stage2.py  cfg_pi05_base_finetune_close_box_value_segmented.py  cfg_pi05_base_finetune_clothes_recap_qirl.py  cfg_pi05_base_finetune_multi_task_distributional_value.py  cfg_pi05_base_finetune_multi_task_qirl.py  cfg_pi05_base_pack_socks_0106_0310_wo_pjl_trtc6.py  (+14 more)
openpi_modified/tests/: README.md  check_top_level_config_loss_drift.py  conftest.py  generate_top_level_config_loss_baseline.py  run_tests.sh
openpi_modified/tests/baseline_metrics/: all_public_dataset_baseline.json  pack_socks_baseline.json  seatbelt_baseline.json
openpi_modified/tests/integration/: test_cross_negative_integration.py  test_integration.py  test_openloop_eval_consistency.py  test_rl_norm_stats_pinning.py
openpi_modified/tests/test_data/: top_level_config_loss_baseline.json
openpi_modified/tools/: __init__.py  auto_download.sh  auto_send.sh  delete_invalid_episode.py  filter_static_frame.py
openpi_modified/tools/cpt_dataset_selector/: __init__.py  cli.py  cpt_dataset_selector.html  cpt_dataset_selector.md  indexer.py  manifest.py  matcher.py  parse_tasks.py  server.py  taxonomy.json  taxonomy_loader.py
openpi_modified/tools/dataset_viewer/: README.md  visualize.py
openpi_modified/tools/fold_box/: generate_segment_boundaries.py  make_cfg_diff_viz.py  make_cfg_viz.py  slice_dataset.py  slices.csv.example  vis_segment_boundaries.py
openpi_modified/tools/github_runner/: dsw_startup.sh  runner.env.example  runner_manager.py  runsvc.sh
openpi_modified/tools/gitlab_runner/: register_dsw_runner.sh
openpi_modified/tools/policy_model_tools/: auto_test_policy_model.sh
openpi_modified/tools/public_dataset/: add_chunk-000.py  analyze_robot_norm_stats.py  auto_rename_prompt.py  check_frame_consistency.py  data_validator.py  extract_stale_frames.py  statis_episode_info.py  vis_all_action.py  visualize_gt.py
openpi_modified/tools/value_model_tools/: auto_test_value_model.sh  verify_parquet_integrity.py
openpi_modified/tools/worktree_tools/: sync-worktree-symlinks.sh
(+601 files in other folders)
