[project]
name = "openpi"
version = "0.1.0"
description = "Physical Intelligence open source repo"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "augmax>=0.3.4",
    "dm-tree>=0.1.8",
    "einops>=0.8.0",
    "equinox>=0.11.8",
    "flatbuffers>=24.3.25",
    "flax==0.10.2",
    "fsspec[gcs]>=2024.6.0",
    "gym-aloha>=0.1.1",
    "imageio>=2.36.1",
    "jax[cuda12]==0.5.3",
    "jaxtyping==0.2.36",
    "lerobot",
    "ml_collections==1.0.0",
    "numpy>=1.22.4,<2.0.0",
    "numpydantic>=1.6.6",
    "opencv-python>=4.10.0.84",
    "openpi-client",
    "orbax-checkpoint==0.11.13",
    "pillow>=11.0.0",
    "sentencepiece>=0.2.0",
    "seaborn>=0.13.0",
    "torch==2.7.1",
    "tqdm-loggable>=0.2",
    "typing-extensions>=4.12.2",
    "tyro>=0.9.5",
    "wandb>=0.19.1",
    "filelock>=3.16.1",
    "beartype==0.19.0",
    "treescope>=0.1.7",
    "transformers==4.53.2",
    "rich>=14.0.0",
    "polars>=1.30.0",
]


[project.urls]
Repository = "https://github.com/Physical-Intelligence/openpi"

[dependency-groups]
dev = [
    "black==24.10.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.6",
    "pre-commit>=4.0.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "pynvml>=12.0.0",
]
rlds = [
    "dlimp",
    "tensorflow-cpu==2.15.0",
    "tensorflow-datasets==4.9.9",
]
cpt = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.uv]
override-dependencies = ["ml-dtypes==0.4.1", "tensorstore==0.1.74"]

[tool.uv.sources]
openpi-client = { workspace = true }
lerobot = { git = "https://github.com/huggingface/lerobot", rev = "0cf864870cf29f4738d3ade893e6fd13fbd7cdb5" }
dlimp = { git = "https://github.com/kvablack/dlimp", rev = "ad72ce3a9b414db2185bc0b38461d4101a65477a" }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["docker", "third_party", "src/openpi/configs", "src/openpi/models_pytorch/transformers_replace/*"]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "B",
    "C4",
    "DTZ",
    "E4",
    "E7",
    "E9",
    "F",
    "FBT",
    "FURB",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "PD",
    "PERF",
    "PIE",
    "PLC",
    "PLE",
    "PLR1",
    "PLR5",
    "PLW",
    "PT",
    "Q",
    "RET",
    "RUF",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "UP",
    "W",
]
ignore = [
    "F722",   # Conflicts with array typing.
    "T201",   # We use print statements.
    "PD008",  # Lots of false positives.
    "ISC001", # Disabling to support ruff format.
    "LOG015", # Use logger.info.
]
unfixable = [
    "B905", # Fix defaults to strict=False, which is not what we want.
]

[tool.ruff.lint.per-file-ignores]
# Legacy dataset: large API surface, Chinese comments, patterns not worth mass-refactoring for lint.
"src/openpi/training/anyverse_dataset.py" = [
    "B905",
    "C416",
    "FBT001",
    "FBT002",
    "F841",
    "PERF102",
    "PERF401",
    "RET503",
    "RUF002",
    "RUF003",
    "RUF015",
    "SIM101",
    "SIM108",
    "SIM118",
    "SLF001",
]
# Legacy visualization / inference script: Chinese punctuation in comments, matplotlib patterns.
"scripts/policy_inference.py" = [
    "B007",
    "B905",
    "FBT003",
    "N806",
    "PLW2901",
    "RUF001",
    "RUF002",
    "RUF003",
    "SLF001",
]
# Cross-negative integration tests intentionally access private dataset attributes
# (episode_prompt_map, is_negative_episode_tensor) to test flip path end-to-end.
"tests/integration/test_cross_negative_integration.py" = ["SLF001"]
# Checkpoint module: Chinese comments in multi-host training code.
"src/openpi/training/checkpoints.py" = ["RUF003"]
# Test script: boolean flags for visualization options.
"scripts/test.py" = ["FBT001", "FBT002"]
# Train script: environment setup before imports (E402), intentional import order (I001).
"scripts/train.py" = ["E402", "I001", "F401", "N812", "SIM108", "RUF003"]
# Config module: star imports from base_cfg (F403, F405).
"src/openpi/training/config.py" = ["F403", "F405"]
# Training utils: star imports from robot_cfg (F403, F405).
"src/openpi/training/utils.py" = ["F403", "F405"]
# Seatbelt benchmark v4 module: CLI script with bool flags + plotting aliases.
"scripts/benchmark/data_parser.py" = ["FBT001", "PLW2901", "SIM108"]
"scripts/benchmark/data_splits.py" = ["SIM115"]
"scripts/benchmark/metrics.py" = ["RUF012"]
"scripts/benchmark/run_benchmark.py" = ["B007", "B905", "E402", "FBT001", "FBT002", "FBT003"]
"scripts/benchmark/viz/video.py" = ["FBT003", "N806"]
# Benchmark unit tests: pytestmark = [pytest.mark.unit] at file top requires E402
# for imports that follow; N806 for test shape vars (T), PT011 for broad pytest.raises,
# FBT for boolean fixture params.
"tests/unit/benchmark/test_classification_metrics.py" = ["E402", "FBT001"]
"tests/unit/benchmark/test_data_parser.py" = ["E402", "FBT003", "N806", "PT011"]
"tests/unit/benchmark/test_find_gap.py" = ["E402"]
"tests/unit/benchmark/test_metrics_extended.py" = ["E402", "PT011"]
"tests/unit/benchmark/viz/test_curve_plots.py" = ["E402"]
"tests/unit/benchmark/viz/test_image_utils.py" = ["E402", "PT011"]
"tests/unit/benchmark/viz/test_status_bar.py" = ["E402"]
"tests/unit/benchmark/viz/test_video.py" = ["E402", "N806"]
# Dual-prompt aggregator tests: pytestmark pattern (E402), numeric-suffixed class names (N801),
# literal row-lookup via [0] is more readable than next(... for ...) (RUF015),
# unicode minus in test strings to match feishu convention (RUF001/RUF003),
# compound asserts for header presence (PT018).
"tests/unit/benchmark/test_aggregate_dual_prompt.py" = ["E402", "N801", "RUF015", "RUF001", "RUF003", "PT018"]
# pi06 RECAP indicator cfg: legacy star imports from openpi.configs.base + robot_cfg (F403, F405).
# Star imports are the project's cfg convention (see config.py / utils.py entries above).
"src/openpi/configs/cfg_pi06_recap_indicator_bipiper_clothes_all_0322.py" = ["F403", "F405"]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
single-line-exclusions = ["collections.abc", "typing", "typing_extensions"]
known-third-party = ["wandb"]

[tool.black]
line-length = 120
target-version = ["py311"]
extend-exclude = '''
(
    third_party/
    | tools/public_dataset/
    | src/openpi/models_pytorch/transformers_replace/
)
'''

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--strict-markers --ignore=src/openpi/configs"
markers = [
    "manual: should be run manually.",
    "unit: fast unit-level coverage.",
    "integration: cross-module pipeline coverage.",
    "smoke: very fast regression guardrails.",
    "config: configuration loading and contract checks.",
    "rl: reinforcement-learning related tests.",
    "pretrain: pretraining/model/data-pipeline tests.",
    "posttrain: post-training/inference/evaluation tests.",
    "slow: long-running tests.",
    "gpu: tests requiring GPU.",
]
norecursedirs = [".git", ".venv", ".hf_cache", "checkpoints", "outputs", "wandb", "vis"]
python_files = ["test_*.py", "*_test.py"]
testpaths = ["src/openpi", "scripts", "packages/openpi-client/src", "tests"]
